# uniasset-audioplayer

./: .gitignore  LICENSE
.github/workflows/: ci-android.yml  ci-darwin.yml  ci-ohos.yml  ci-windows.yml  releasing.yml
Source/Core/: .gitignore  Cargo.toml
Source/Core/.cargo/: clang-ohos.sh  config.toml
Source/Core/demo-console/: Cargo.toml
Source/Core/demo-console/src/: main.rs
Source/Core/uniasset-audioplayer/: Cargo.toml
Source/Core/uniasset-audioplayer-bridge/: Cargo.toml
Source/Core/uniasset-audioplayer-bridge/src/: audio_stream.rs  buffered_audio_stream.rs  error.rs  internal_audio_stream.rs  lib.rs  object.rs  play_handle.rs  player.rs
Source/Core/uniasset-audioplayer/src/: error.rs  lib.rs  player.rs  types.rs
Source/Core/uniasset-audioplayer/src/hal/: device.rs  mod.rs
Source/Core/uniasset-audioplayer/src/hal/platform/: coreaudio.rs  dummy.rs  mod.rs  oboe.rs  ohos.rs  wasapi.rs
Source/Core/uniasset-audioplayer/src/hal/platform/wasapi/: com.rs  device.rs  mod.rs
Source/Core/uniasset-audioplayer/src/mixer/: audio_stream.rs  mixer.rs  mod.rs  play_handle.rs
Source/Core/uniasset-audioplayer/src/stream/buffered_stream/: buffer.rs  mod.rs  worker.rs
Source/UnityDemo/UniassetAudioPlayerDemo/Assets/Plugins/: .gitignore  Uniasset.AudioPlayer
Source/UnityDemo/UniassetAudioPlayerDemo/Assets/Scenes/: SampleScene.unity
Source/UnityDemo/UniassetAudioPlayerDemo/Assets/Scripts/: TestUIManager.cs
Source/UnityDemo/UniassetAudioPlayerDemo/ProjectSettings/: ProjectSettings.asset
Source/UnitySDK/: UniassetAudioPlayer.asmdef
Source/UnitySDK/Audio/: AudioClipStream.cs  AudioPlayer.cs  BufferedAudioStream.cs  IAudioStream.cs  InternalAudioStream.cs  ModifierCallback.cs  PlayHandle.cs
Source/UnitySDK/Supports/: AudioAssetStream.cs  UniassetAudioPlayer_Supports_Uniasset.asmdef
Source/UnitySDK/Unsafe/: Interop.LibName.cs  Interop.cs  ModifierBinding.cs  ModifierBridge.cs  NativeException.cs  NativeModifier.cs  NativeTypeNameAttribute.cs  UnsafeAudioPlayer.cs  UnsafeAudioStream.cs  UnsafeBufferedAudioStream.cs  UnsafeInternalAudioStream.cs  UnsafePlayHandle.cs
