[package]
name = "uniasset-audioplayer"
version = "0.1.0"
edition = "2021"

[lib]
name = "uniasset_audioplayer"

[dependencies]
# Atomic Arc swapping for lock-free snapshot management (Mixer).
arc-swap = "1"
# Efficient parking lot based synchronization primitives
parking_lot = "0.12"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
coreaudio-sys = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "android")'.dependencies]
oboe = "0.6"
